@@ -19,29 +19,23 @@
 #ifndef POPUPWINDOW_H
 #define POPUPWINDOW_H
 
-#include <QFrame>
+#include "resizablepopup.h"
 #include "dictcore.h"
 
-class QAction;
-class QEvent;
-class QTimer;
-class QClipboard;
-
 class DictWidget;
+class Selection;
 
-class PopupWindow: public QFrame
+class PopupWindow: public ResizablePopup
 {
     Q_OBJECT
 
     public:
-        PopupWindow(DictCore *dict = NULL, QWidget *parent = 0);
+        PopupWindow(DictCore *dict = 0, QWidget *parent = 0);
         ~PopupWindow();
 
         bool isScan() const;
         int modifierKey() const;
         bool showIfNotFound() const;
-        int timeoutBeforeHide() const;
-        const QSize& defaultSize() const;
         DictCore::TranslationFlags translationFlags() const;
 
         DictCore* dict() const;
@@ -50,34 +44,21 @@ class PopupWindow: public QFrame
         void setScan(bool scan);
         void setModifierKey(int key);
         void setShowIfNotFound(bool mode);
-        void setTimeoutBeforeHide(int timeoutBeforeHide);
-        void setDefaultSize(const QSize &defaultSize);
         void setTranslationFlags(DictCore::TranslationFlags translationFlags);
         void showTranslation(const QString &text);
 
-    signals:
-        void scanChanged(bool);
-
-    protected:
-        void enterEvent(QEvent*);
-        void leaveEvent(QEvent*);
-        void timerEvent(QTimerEvent*);
-    
     private slots:
-        void xSelectionChanged();
+        void selectionChanged(const QString &text);
+
+    signals:
+        void scanChanged(bool scan);
 
     private:
-        DictCore* m_dict;
         DictWidget *translationView;
-        QTimer *closeTimer;
-        QString m_source;
-        bool m_scan;
+        DictCore* m_dict;
         int m_modifierKey;
         bool m_showIfNotFound;
-        QString lastSelection;
-        int timerId;
-        int m_timeoutBeforeHide;
-        QSize m_defaultSize;
+        Selection *m_selection;
 };
 
 #endif // POPUPWINDOW_H
